[Fix][Timeline] #21436 : corrections alignments in external notifications

--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -220,10 +220,6 @@
 }
 //specific notfs extern
 .my-notifications {
-    input[type="email"] {
-        margin-left: 5px;
-        width: 30%;
-    }
     .responsive-table {
         .fixed-head {
             //	z-index: 99;
