--- a/css/mobile/_tablette.scss
+++ b/css/mobile/_tablette.scss
@@ -378,15 +378,6 @@
 	}
 
 
-
-	//specific notfs extern
-	.my-notifications{
-		input[type="email"]{
-			width: 60%;
-		}
-	}
-
-
 	//for lightbox medialib in side nav
 	body nav.vertical[side-nav] .lightbox{
 		 ul li a{
